--- a/src copy 2/index.css
+++ b/src copy 2/index.css
@@ -27,12 +27,11 @@ body {
 /* GENRAL REUSABLE COMPONENTS */
 /**************************/
 .App{
-  /* max-width: 100vw; */
-  margin: 0 auto;
+  max-width: 100vw;
 }
 
 .App-dark{
-  /* max-width: 100vw; */
+  max-width: 100vw;
   background: #ddd;
   position: relative;
 }
@@ -58,7 +57,7 @@ body {
   row-gap: 6.2rem;
   width: 100%;
   
-  margin-top: 12.8rem;
+  margin-top: -5rem;
 }
 
 .custom{
@@ -183,22 +182,10 @@ body {
   top: 0;
   right: 0%;
   width: 22%;
-  height: 100vh;
-  z-index: 1000;
-  background-color: #fff !important;
-  padding: 9.6rem 1.6rem;
-}
-
-/*  */
-
-.modal-backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
   height: 100%;
-  /* background-color: rgba(0, 0, 0, 0.5); */
-  z-index: 0;
+  z-index: 9999;
+  background-color: #fff;
+  padding: 9.6rem 1.6rem;
 }
 
 .section-sidebar{
@@ -316,6 +303,10 @@ body {
   position: absolute;
   bottom: 10%;
   left: 30%
+  /* z-index: 998; */
+  /* transform: translate(-160%, 550%); */
+  /* transform: translateY(100%); */
+
 }
 
 .heading-primary-blue{
@@ -401,9 +392,9 @@ body {
   .grid--4-cols{
     grid-template-columns: repeat(3, 1fr);
   }
-  /* .label-and-input{
+  .label-and-input{
     grid-column: span 2;
-  } */
+  }
   .sidebarSlide{
     width: 25%;
   }
@@ -420,12 +411,37 @@ body {
     font-size: 50%;
   }
   .custom{
+    grid-template-columns: 1fr 2fr;
+  }
+  .grid--4-cols{
+    grid-template-columns: repeat(2, 1fr);
+  }
+  /* .movie-div{
+    width: 80%;
+  }
+  .movie-div img{
+    width: 100%;
+    
+  } */
+  .grid-special{
+    padding: 0 6.2rem;
+  }
+  .sidebarSlide{
+    width: 33%;
+  }
+}
+
+/**************************/
+/* BELOW 1000px (Landscape Tablets) */
+/**************************/
+@media (max-width: 63em){
+  .custom{
     grid-template-columns: 2fr;
   }
   .section-sidebar{
     border-right: none;
-    height: 0.001vh;
-    padding: 4.8rem 4.8rem;
+    height: 0.01vh;
+    padding: 4.8rem 9.6rem;
     margin-bottom: 9.6rem;
   }
   .header{
@@ -439,18 +455,20 @@ body {
   }
   .heading-primary {
     font-size: 5.2rem;
+    line-height: 1.05;
+    margin-bottom: 0.01rem;
   }
   .grid-special{
-    padding: 0 6.2rem;
+    padding: 0 9.6rem;
   }
   .sidebarSlide{
-    width: 33%;
+    width: 36%;
   }
 
   /* MOBILE NAVIGATION */
   .btn-mobile-nav {
     display: block;
-    z-index: 999;
+    z-index: 9999;
   }
 
   .main-nav {
@@ -488,7 +506,6 @@ body {
     pointer-events: auto;
     visibility: visible;
     transform: translateX(0);
-    z-index: 10;
   }
 
   .nav-open .icon-mobile-nav[name="close-outline"] {
@@ -504,86 +521,7 @@ body {
     gap: 9.6rem;
   }
 
-  .take-all-row{
-    /* grid-column: 1/ -1; */
-    margin: 0 auto;
-  }
-
   .main-nav-link {
-    font-size: 3.6rem;
-  }
-}
-
-/**************************/
-/* BELOW 800px (Landscape Tablets) */
-/**************************/
-@media (max-width: 50em){
-  html{
-    font-size: 46%;
-  }
-  .grid--3-cols {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  
-  .grid--4-cols {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .label-and-input{
-    grid-column: span 1;
-  }
-  .movie-div .btn{
-    left: 37%
-  }
-  .grid-special{
-    padding: 0 9.6rem;
-  }
-  .take-all-row{
-    /* grid-column: 1/ -1; */
-    margin: 0 auto;
-  }
-  .section-sidebar{
-    padding: 4.8rem 8.2rem;
-  }
-  .sidebarSlide{
-    width: 50%;
-    height: 100vh;
-  }
-}
-/**************************/
-/* BELOW 600px (Landscape Tablets) */
-/**************************/
-@media (max-width: 37.5em){
-  .grid--3-cols {
-    grid-template-columns: 1fr;
-  }
-  
-  .grid--4-cols {
-    grid-template-columns: 1fr;
-  }
-  /* .label-and-input{
-    grid-column: span 1;
-  } */
-  .movie-div .btn{
-    left: 40%;
-  }
-  .grid-special{
-    padding: 0 3.2rem;
-  }
-  .section-sidebar{
-    padding: 4.8rem 1.2rem;
-  }
-
-  .take-all-row{
-    /* grid-column: 1/ -1; */
-    margin: 0 auto;
-  }
-
-  .heading-primary {
-    font-size: 4.4rem;
-  }
-
-  .sidebarSlide{
-    width: 100%;
-    height: 100vh;
+    font-size: 4.8rem;
   }
 }
