--- a/src copy/index.css
+++ b/src copy/index.css
@@ -27,14 +27,12 @@ body {
 /* GENRAL REUSABLE COMPONENTS */
 /**************************/
 .App{
-  /* max-width: 100vw; */
-  margin: 0 auto;
+  max-width: 140rem;
 }
 
 .App-dark{
-  /* max-width: 100vw; */
+  max-width: 140rem;
   background: #ddd;
-  position: relative;
 }
 
 .container {
@@ -57,12 +55,12 @@ body {
   column-gap: 2.4rem;
   row-gap: 6.2rem;
   width: 100%;
-  
+  position: relative;
   margin-top: 12.8rem;
 }
 
 .custom{
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 4fr;
 }
 
 .grid--2-cols {
@@ -155,50 +153,18 @@ body {
   justify-content: center;
 }
 
-/* MOBILE */
-.btn-mobile-nav {
-  border: none;
-  background: none;
-  cursor: pointer;
-
-  display: none;
-}
-
-.icon-mobile-nav {
-  height: 4.8rem;
-  width: 4.8rem;
-  color: #333;
-}
-
-.icon-mobile-nav[name="close-outline"] {
-  display: none;
-}
-
-
 /**************************/
 /* NOT AT ALL GENRAL REUSABLE COMPONENTS */
 /**************************/
 .sidebarSlide{
-  position: absolute;
-  top: 0;
-  right: 0%;
-  width: 22%;
-  height: 100vh;
-  z-index: 1000;
-  background-color: #fff !important;
-  padding: 9.6rem 1.6rem;
-}
-
-/*  */
-
-.modal-backdrop {
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100%;
+  right: 0%;
+  width: 24%;
   height: 100%;
-  /* background-color: rgba(0, 0, 0, 0.5); */
-  z-index: 0;
+  z-index: 999;
+  background-color: #fff;
+  padding: 9.6rem 1.6rem;
 }
 
 .section-sidebar{
@@ -240,7 +206,7 @@ body {
 }
 
 .label-and-input{
-  grid-column: span 2;
+  grid-column: span 3;
 }
 
 .search-btn{
@@ -253,7 +219,7 @@ body {
 .inline-element{
   display: grid;
 }
-/* .list li {
+.list li {
   position: relative;
   display: grid;
   grid-template-columns: 4rem 1fr;
@@ -264,7 +230,7 @@ body {
 
   padding: 1.6rem 3.2rem;
   border-bottom: 1px solid var(--color-background-100);
-} */
+}
 
 .list.list-movies li {
   cursor: pointer;
@@ -274,11 +240,11 @@ body {
 .list.list-movies li:hover {
   background-color: var(--color-background-100);
 }
-/* 
+
 .list img {
   width: 100%;
   grid-row: 1 / -1;
-} */
+}
 
 .list h3 {
   font-size: 1.8rem;
@@ -316,6 +282,10 @@ body {
   position: absolute;
   bottom: 10%;
   left: 30%
+  /* z-index: 998; */
+  /* transform: translate(-160%, 550%); */
+  /* transform: translateY(100%); */
+
 }
 
 .heading-primary-blue{
@@ -371,219 +341,4 @@ body {
   border-radius: 9px;
   padding: 0.6rem;
   color: #fff;
-}
-
-.main-nav-link{
-  cursor: pointer;
-}
-/**************************/
-/* BELOW 1344px (Smaller desktops) */
-/**************************/
-
-@media (max-width: 82em) {
-  html{
-    font-size: 60.5%;
-  }
-}
-
-/**************************/
-/* BELOW 1200px (Landscape Tablets) */
-/**************************/
-@media (max-width: 75em) {
-  html {
-    /* 9px / 16px  */
-    font-size: 56.25%;
-  }
-
-  .custom{
-    grid-template-columns: 1fr 3fr;
-  }
-  .grid--4-cols{
-    grid-template-columns: repeat(3, 1fr);
-  }
-  /* .label-and-input{
-    grid-column: span 2;
-  } */
-  .sidebarSlide{
-    width: 25%;
-  }
-  /* .inline-element{
-    grid-column: 3/4
-  } */
-}
-
-/**************************/
-/* BELOW 1000px (Landscape Tablets) */
-/**************************/
-@media (max-width: 63em){
-  html{
-    font-size: 50%;
-  }
-  .custom{
-    grid-template-columns: 2fr;
-  }
-  .section-sidebar{
-    border-right: none;
-    height: 0.001vh;
-    padding: 4.8rem 4.8rem;
-    margin-bottom: 9.6rem;
-  }
-  .header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .main-nav-list{
-    flex-direction: row;
-    gap: 3.2rem;
-  }
-  .heading-primary {
-    font-size: 5.2rem;
-  }
-  .grid-special{
-    padding: 0 6.2rem;
-  }
-  .sidebarSlide{
-    width: 33%;
-  }
-
-  /* MOBILE NAVIGATION */
-  .btn-mobile-nav {
-    display: block;
-    z-index: 999;
-  }
-
-  .main-nav {
-    background-color: rgba(255, 255, 255, 0.9);
-    -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(10px);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    transform: translateX(100%);
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.5s ease-in;
-
-    /* Hide navigation */
-    /* Allows NO transitions at all */
-    /* display: none; */
-
-    /* 1) Hide it visually */
-    opacity: 0;
-
-    /* 2) Make it unaccessible to mouse and keyboard */
-    pointer-events: none;
-
-    /* 3) Hide it from screen readers */
-    visibility: hidden;
-  }
-
-  .nav-open .main-nav {
-    opacity: 1;
-    pointer-events: auto;
-    visibility: visible;
-    transform: translateX(0);
-    z-index: 10;
-  }
-
-  .nav-open .icon-mobile-nav[name="close-outline"] {
-    display: block;
-  }
-
-  .nav-open .icon-mobile-nav[name="menu-outline"] {
-    display: none;
-  }
-
-  .main-nav-list {
-    flex-direction: column;
-    gap: 9.6rem;
-  }
-
-  .take-all-row{
-    /* grid-column: 1/ -1; */
-    margin: 0 auto;
-  }
-
-  .main-nav-link {
-    font-size: 3.6rem;
-  }
-}
-
-/**************************/
-/* BELOW 800px (Landscape Tablets) */
-/**************************/
-@media (max-width: 50em){
-  html{
-    font-size: 46%;
-  }
-  .grid--3-cols {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  
-  .grid--4-cols {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .label-and-input{
-    grid-column: span 1;
-  }
-  .movie-div .btn{
-    left: 37%
-  }
-  .grid-special{
-    padding: 0 9.6rem;
-  }
-  .take-all-row{
-    /* grid-column: 1/ -1; */
-    margin: 0 auto;
-  }
-  .section-sidebar{
-    padding: 4.8rem 8.2rem;
-  }
-  .sidebarSlide{
-    width: 50%;
-    height: 100vh;
-  }
-}
-/**************************/
-/* BELOW 600px (Landscape Tablets) */
-/**************************/
-@media (max-width: 37.5em){
-  .grid--3-cols {
-    grid-template-columns: 1fr;
-  }
-  
-  .grid--4-cols {
-    grid-template-columns: 1fr;
-  }
-  /* .label-and-input{
-    grid-column: span 1;
-  } */
-  .movie-div .btn{
-    left: 40%;
-  }
-  .grid-special{
-    padding: 0 3.2rem;
-  }
-  .section-sidebar{
-    padding: 4.8rem 1.2rem;
-  }
-
-  .take-all-row{
-    /* grid-column: 1/ -1; */
-    margin: 0 auto;
-  }
-
-  .heading-primary {
-    font-size: 4.4rem;
-  }
-
-  .sidebarSlide{
-    width: 100%;
-    height: 100vh;
-  }
 }
