--- a/src copy 4/index.css
+++ b/src copy 4/index.css
@@ -27,11 +27,12 @@ body {
 /* GENRAL REUSABLE COMPONENTS */
 /**************************/
 .App{
-  max-width: 100vw;
+  /* max-width: 100vw; */
+  margin: 0 auto;
 }
 
 .App-dark{
-  max-width: 100vw;
+  /* max-width: 100vw; */
   background: #ddd;
   position: relative;
 }
@@ -39,13 +40,6 @@ body {
 .container {
   /* 1140px */
   max-width: 100rem;
-  padding: 0 3.2rem;
-  margin: 0 auto;
-}
-
-.container2 {
-  /* 1140px */
-  width: 100rem;
   padding: 0 3.2rem;
   margin: 0 auto;
 }
@@ -58,9 +52,17 @@ body {
   /* margin-bottom: 9.6rem; */
 }
 
+.grid-special {
+  display: grid;
+  column-gap: 2.4rem;
+  row-gap: 6.2rem;
+  width: 100%;
+  
+  margin-top: 12.8rem;
+}
+
 .custom{
-  max-width: 140rem;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 1fr 3fr;
 }
 
 .grid--2-cols {
@@ -181,27 +183,22 @@ body {
   top: 0;
   right: 0%;
   width: 22%;
-  height: 100%;
-  z-index: 9999;
-  background-color: #fff;
+  height: 100vh;
+  z-index: 1000;
+  background-color: #fff !important;
   padding: 9.6rem 1.6rem;
 }
 
-.form-div{
-  grid-column: 1 / -1;
-  padding: 12.8rem 0 0;
-}
+/*  */
 
-.labelInput{
-  grid-column: span 3;
-}
-
-.form{
-  margin-bottom: 8.2rem;
-}
-
-.search-button-container{
-  align-self: end;
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  z-index: 0;
 }
 
 .section-sidebar{
@@ -223,10 +220,10 @@ body {
   background-color: var(--color-primary-light);
 }
 
-.labelInput label{
+.label-and-input label{
   display: block;
 }
-.labelInput input{
+.label-and-input input{
   background: #f1f3f5;
   width: 100%;
   padding: 1.6rem 3.2rem;
@@ -242,10 +239,9 @@ body {
   transition: all 0.3s;
 }
 
-/* .labelInput{
-  grid-column: span 3;
-  
-} */
+.label-and-input{
+  grid-column: span 2;
+}
 
 .search-btn{
   /* border-radius: 50px; */
@@ -254,9 +250,53 @@ body {
   background: #7048e8;
 }
 
+.inline-element{
+  display: grid;
+}
+/* .list li {
+  position: relative;
+  display: grid;
+  grid-template-columns: 4rem 1fr;
+  grid-template-rows: auto auto;
+  column-gap: 2.4rem;
+  font-size: 1.6rem;
+  align-items: center;
+
+  padding: 1.6rem 3.2rem;
+  border-bottom: 1px solid var(--color-background-100);
+} */
+
+.list.list-movies li {
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.list.list-movies li:hover {
+  background-color: var(--color-background-100);
+}
+/* 
+.list img {
+  width: 100%;
+  grid-row: 1 / -1;
+} */
+
+.list h3 {
+  font-size: 1.8rem;
+}
+
+.list div {
+  display: flex;
+  align-items: center;
+  gap: 2.4rem;
+}
+
+.list p {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
 .take-all-row{
   grid-column: 1/ -1;
-  padding: 0 0 9.6rem 0;
 }
 
 .movie-div{
@@ -276,10 +316,6 @@ body {
   position: absolute;
   bottom: 10%;
   left: 30%
-  /* z-index: 998; */
-  /* transform: translate(-160%, 550%); */
-  /* transform: translateY(100%); */
-
 }
 
 .heading-primary-blue{
@@ -365,9 +401,9 @@ body {
   .grid--4-cols{
     grid-template-columns: repeat(3, 1fr);
   }
-  .label-and-input{
+  /* .label-and-input{
     grid-column: span 2;
-  }
+  } */
   .sidebarSlide{
     width: 25%;
   }
@@ -384,37 +420,12 @@ body {
     font-size: 50%;
   }
   .custom{
-    grid-template-columns: 1fr 2fr;
-  }
-  .grid--4-cols{
-    grid-template-columns: repeat(2, 1fr);
-  }
-  /* .movie-div{
-    width: 80%;
-  }
-  .movie-div img{
-    width: 100%;
-    
-  } */
-  .grid-special{
-    padding: 0 6.2rem;
-  }
-  .sidebarSlide{
-    width: 33%;
-  }
-}
-
-/**************************/
-/* BELOW 1000px (Landscape Tablets) */
-/**************************/
-@media (max-width: 63em){
-  .custom{
     grid-template-columns: 2fr;
   }
   .section-sidebar{
     border-right: none;
-    height: 0.01vh;
-    padding: 4.8rem 9.6rem;
+    height: 0.001vh;
+    padding: 4.8rem 4.8rem;
     margin-bottom: 9.6rem;
   }
   .header{
@@ -428,20 +439,18 @@ body {
   }
   .heading-primary {
     font-size: 5.2rem;
-    line-height: 1.05;
-    margin-bottom: 0.01rem;
   }
   .grid-special{
-    padding: 0 9.6rem;
+    padding: 0 6.2rem;
   }
   .sidebarSlide{
-    width: 36%;
+    width: 33%;
   }
 
   /* MOBILE NAVIGATION */
   .btn-mobile-nav {
     display: block;
-    z-index: 9999;
+    z-index: 999;
   }
 
   .main-nav {
@@ -479,6 +488,7 @@ body {
     pointer-events: auto;
     visibility: visible;
     transform: translateX(0);
+    z-index: 10;
   }
 
   .nav-open .icon-mobile-nav[name="close-outline"] {
